--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.7",
+    "@mui/styled-engine-sc": "^5.11.0",
+    "antd": "^5.1.7",
+    "axios": "^1.2.6",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.16.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
+    "styled-components": "^5.3.6",
     "swiper": "^8.4.5"
   },
   "devDependencies": {
